# deilephila

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: main.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-032ab3339caa514af621a9dd3abd0b787239ec3992631c5fa7649941d9199c80.json  query-0a8609ff9e50574f6f5b802e87a8113c2f7f54b590198dc1b6009ec99adc4dd2.json  query-0b67bc8d09450fe744265d22e9c3ff7e113b024a0e934eb6625ad1142a3f0e8b.json  query-0daeaac16e67a89a48213aeaa1addab5c2da00311e4560ff2751fc5a3ab3ad26.json  query-1950efa46b233e0a5fb0eb39c910ac2f5778d45257e5b69680ccface737bba56.json  query-1a26cd61bd3d6ecd43885920add6fc6894cc62b692f9be0857bc3179bd52f4cc.json  query-1d3e6ed38e0b80b0cea665c6bd99e106e5499a8e131ba99f097e9bd11a2ec5f4.json  query-1ef148513b473b5e677c1d4ffd0b48e041baf70ca6086f11c0aec3dcb45a05fb.json  query-24951a8288fe824b94f6e55b8153a1ab425bd91d023e49b482ce34aed0eaff9f.json  query-2c9600ab7ac645ddd6443c8d8881e94d11a01cba49178ca72ee2d623c94d8064.json  query-2de1c583901c84a09be6ad2bd54a4452150ed5beb419a85da33301c1c7efb0d6.json  query-2ecca69b7b5e52103529454eef22dd4d99af30e53772ca7f95d500c3bdf32b79.json  query-4129a65c0256dcf8867e7b9fe3c4faf1a49321fc89b5d23738f980ab8c37de2c.json  query-49534b26e5b496221cb854f4cc9ea61d12d6ff8cf0f75fb3963bcdff73243f0a.json  query-54a4989a2f2478c3a31428b0de267e61b4e23a4030d52b2f0cb58a3d9c7c738f.json  query-56a31f2c7430d1857f1c2484664bfde8ab1b49f57899727f4c265eb9879fe33c.json  query-5be20c403fad0e1e9413a5fca331d7b832cfad6633b90061a0cc991c4d73fbfb.json  query-5de8e8a3b068486ea1c7c9a9793b28f918a30ebcc87ced2d492b354ce5c0fc37.json  (+26 more)
(+41 files in other folders)
