[package]
name = "deilephila"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deilephila_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
serde_bytes = "0.11.19"
serde_ipld_dagcbor = "0.6.4"
cid = { version = "0.11.3", features = ["serde"] }
multihash-codetable = { version = "0.2.2", features = ["sha2"] }
getrandom = { version = "0.4.2", features = ["sys_rng"] }
argon2 = "0.5"
aes-gcm = "0.10"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
libp2p = { version = "0.55", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "identify",
    "mdns",
    "request-response",
    "gossipsub",
    "macros",
] }
futures = "0.3"
